<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/main_hint">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/city_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/search_gradient"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/city_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>




        <Button
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/search_gradient"
            android:layout_marginTop="8dp"
            android:text="@string/search"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/city_text_input"
            app:layout_constraintStart_toStartOf="@+id/city_text_input"
            app:layout_constraintTop_toBottomOf="@+id/city_text_input" />

        <TextView
            android:id="@+id/city_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/my_main_font"
            android:textStyle="italic"
            android:textSize="22sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_btn"
            android:text="Bishkek" />

        <TextView
            android:id="@+id/week_day_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/my_main_font"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/city_tv"
            app:layout_constraintTop_toBottomOf="@id/city_tv"
            tools:text="Sunday," />

        <TextView
            android:id="@+id/current_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/my_main_font"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/week_day_tv"
            app:layout_constraintStart_toEndOf="@id/week_day_tv"
            app:layout_constraintTop_toTopOf="@id/week_day_tv"
            tools:text="1 PM" />

        <ImageView
            android:id="@+id/weather_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_sunny"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_time_tv"
            app:tint="#EEB64A" />

        <TextView
            android:id="@+id/temp_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="48sp"
            android:textColor="@color/blue"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_iv"
            tools:text="28" />

        <TextView
            android:id="@+id/feels_like_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Feels like"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/temp_tv"/>
        <TextView
            android:id="@+id/temp_feels_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:textSize="24sp"
            android:textColor="@color/blue"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@id/feels_like_text"
            app:layout_constraintTop_toBottomOf="@id/temp_tv"
            tools:text="26" />

        <TextView
            android:id="@+id/weather_description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/temp_feels_like"
            tools:text="Partly cloudy" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/somerv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_description_tv"
            app:strokeColor="#f57c00"
            app:strokeWidth="1dp">

            <LinearLayout
                android:id="@+id/wind_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/wind_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:background="@drawable/ic_speed_wind"
                        android:layout_gravity="start"/>
                    <TextView
                        android:id="@+id/wind_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/wind"
                        android:textStyle="italic"
                        android:textColor="@color/blue"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/wind_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_marginEnd="8dp"
                        android:textColor="@color/blue"
                        android:layout_weight="2"
                        android:textStyle="bold"
                        android:text="7m/s" />

                </LinearLayout>



                <LinearLayout
                    android:id="@+id/humidity_linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/humidity_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_gravity="start"
                        android:background="@drawable/ic_humidity" />
                    <TextView
                        android:id="@+id/humidity_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textColor="@color/blue"
                        android:textStyle="italic"
                        android:text="@string/humidity"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/humidity_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_marginEnd="8dp"
                        android:textColor="@color/blue"
                        android:layout_weight="2"
                        android:textStyle="bold"
                        android:text="30%" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/visibility_linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/visibility_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:background="@drawable/ic_visibility" />
                    <TextView
                        android:id="@+id/visibility_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_gravity="center"
                        android:textStyle="italic"
                        android:text="@string/visibility"
                        android:textColor="@color/blue" />

                    <TextView
                        android:id="@+id/visibility_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_marginEnd="8dp"
                        android:textColor="@color/blue"
                        android:layout_weight="2"
                        android:textStyle="bold"
                        android:text="1.4km" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/ten_day_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/my_main_font"
            android:text="@string/ten_days"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/weather_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Weather in ten days"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/somerv"/>
        <TextView
            android:id="@+id/tv_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="24sp"
            android:layout_marginStart="16dp"
            android:text="max"
            android:textColor="@color/black"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@id/weather_tv"
            app:layout_constraintTop_toBottomOf="@id/somerv"/>
        <TextView
            android:id="@+id/tv_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:textSize="24sp"
            android:layout_marginStart="8dp"
            android:text="min"
            android:textColor="@color/black"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@id/tv_max"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/somerv"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ten_day_rv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>